--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ignite-coffee-delivery",
+  "name": "coffee-delivery",
   "description": "Desafio da trilha ReactJS",
   "private": true,
   "version": "1.0.0",
