reinstall node_modules

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "coffee-delivery",
-  "description": "Desafio da trilha ReactJS",
+  "description": "Challenge Ignite ReactJS",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
