--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.43.5",
     "react-router-dom": "^6.8.2",
     "styled-components": "^5.3.8",
+    "swiper": "^9.3.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
